--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Light weight react components for rendering JSON Schema forms",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run test:eslint",
+    "test:eslint": "eslint . --ext .js,.jsx",
+    "clean": "rimraf tests/public/*",
+    "demo": "NODE_ENV=development webpack --progress --config demo/webpack.config.js",
+    "demo:watch": "NODE_ENV=development webpack --watch --progress --config demo/webpack.config.js",
+    "demo:devserver": "NODE_ENV=development webpack-dev-server --config demo/webpack.config.js --port 5252 --content-base demo/ --progress"
   },
   "author": "Henrik Haugberg <henrik.haugberg@gmail.com>",
   "license": "MIT",
@@ -18,6 +23,7 @@
     "eslint": "^4.7.2",
     "eslint-plugin-react": "^7.4.0",
     "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
     "node-sass": "^4.5.3",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
@@ -26,6 +32,7 @@
     "webpack-dev-server": "^2.8.2"
   },
   "dependencies": {
+    "bem-cn": "^2.1.3",
     "core-js": "^2.5.1",
     "lodash": "^4.17.4",
     "material-ui": "^0.19.2",
